- Finslipade formuläret     - ändrade knapp från input till button     - Hover animation med before-pseudoelement     - Lade till en 'done'-ikon på submit-knappen     - kortade ner CSS-radlängd     - Justerade formulärets placering i modalen     - Snyggade till text-inputs     - Växla formulärsläge mellan login och register har nu svart text och underline - Modal-section har nu id 'section' - Finslipade sökrutan     - Ikonen är nu <i>-tagg istället för pseudoelement     - Lade till <span> med text bredvid ikonen (det står 'search' på stora skärmar)     - Anpassade media query stiling (filen blev 20 rader kortare) - Små justeringar i album CSS:en för små skärmar (använder media query)     - Info-cirkeln är nu lite större     - .album har overflow:hidden - Alla länkar i nav har samma färg som loggan - Buggfixar     - Det finns nu inget mellanrum mellan formuläret och webbläsarens kanter     - Fixade en bugg som skapade 2 scrollbars i Edge

--- a/css/album.css
+++ b/css/album.css
@@ -65,3 +65,14 @@
     font-family: 'Parisienne', cursive;
     font-weight: 500;
 }
+
+@media (max-width:480px){
+    .album{
+        overflow: hidden;
+    }
+    
+    .info_circle{
+        width: 50vw;
+        height: 50vw;
+    }
+}
