--- a/css/nav.css
+++ b/css/nav.css
@@ -18,7 +18,7 @@ nav {
     position: absolute;
 }
 
-#logo > a{
+nav a{
     color: rgb(66, 66, 66);
 }
 
@@ -53,30 +53,21 @@ nav a{
     align-items: center;
 }
 
-#account_container, input, label{
-    display: block;
-}
-
 #search_container{
     position: relative;
     display: flex;
     justify-content: flex-end;
-    width: 40px;
     height: 40px;
 }
 
-#search_container::after{
-    font-family: "Material Icons";
-    content: "search";
-    font-size: 24px;
-    position: absolute;
-    top: 50%;
+#search_container a{
+    z-index: 1;
     transition: .4s cubic-bezier(.87, .06, .23, .97);
     transition-delay: .5s;
 }
 
-#search_container:hover::after, #search_container:focus-within::after{
-    transform: translateX(-15px);
+#search_container:hover a, #search_container:focus-within a{
+    transform: translateX(110px);
     transition: transform .4s;
 }
 
@@ -85,28 +76,22 @@ nav a{
     display: block;
     padding: 6px 15px;
     width: 100%;
-    top: 10px;
-    max-width: 400px;
     border: solid rgba(0, 0, 0, 0.31) 1px;
-    border-radius: 10px;
+    border-radius: 5px;
     outline: none;
     font-size: 18px;
     opacity: 0;
-    transform: scaleX(0);
-    transform-origin: right;
+    transform: scale(0);
     transition: .3s cubic-bezier(.87, .06, .79, .83);
     transition-delay: .5s;
+    right: 0;
 }
 
 #search_container:hover > input[type=text], #search_container:focus-within > input[type=text]{
     visibility: visible;
-    transform: scale(1);
+    transform: none;
     opacity: 1;
     transition: .4s cubic-bezier(.83, .27, 0, 1);
-}
-
-#search_container:focus-within > a > i{
-    transform: translateX(100px);
 }
 
 /*För större skärmar*/
@@ -114,21 +99,14 @@ nav a{
     nav a > span{
         display: block;
     }
-    #search_container > input{
-        
-    }
-}
-
-@media (max-width:768px){
-    
-    #search_container:hover::after, #search_container:focus-within::after{
-        transform: translateX(110px);
+    #search_container:hover a, #search_container:focus-within a{
+        transform: translateX(-15px);
     }
     
     #search_container > input[type=text]{
-        right: 0;
-        max-width: none;
-        transform-origin: center;
-        transform: scale(0);
+        transform-origin: right;
+        transform: scaleX(0);
+        max-width: 400px;
+        right: auto;
     }
 }
